# week6_tooling_exercises

01_debugging_demo/: CMakeLists.txt  main.cpp
02_bug_hunt/: CMakeLists.txt  main.cpp
03_gprof_demo/: CMakeLists.txt  main.cpp
03_timing_demo/: CMakeLists.txt  main.cpp
04_timing_ex/: CMakeLists.txt
